fixed dark mode button

--- a/src/styles/lg.scss
+++ b/src/styles/lg.scss
@@ -41,7 +41,7 @@
 .siteLogo{
   
   align-self: center;
-  font-size: 3em;
+  
 
   font-weight: 200;
   position: relative;
@@ -60,28 +60,8 @@
         }
     
   }
-  .mobileNav{
-    display:none;
-    flex-direction: column;
-    position: absolute;
-    
-    top:150%;
-    right: 0;
-    z-index: 2;
-    background-color: aqua;
-    width: 100vw;
-    height: 50vh;
-  
-    align-items:center;
-    
-  }
-  .mobileNav li{
-    padding-top: 20px;
-    
-    margin:20px;
-    font-size: 1.5rem;
-  }
-  
+
+
   .navBar::before, .navBar::after{
     content: '';
     display: inline-block;
@@ -224,9 +204,7 @@
 
   }
 
-  p.subtitle{
-    font-size: 1em;
-  }
+
   .postCardInfo h3{
     word-break: keep-all;
   }
@@ -237,7 +215,7 @@
   
   p.subtitle{
     position: relative;
-    font-size: 0.8em;
+    font-size: 2.3rem;
     white-space: wrap;
     overflow: hidden;
     text-overflow: ellipsis;
